# tm-server-manager

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  req-pages.md  test_dirt_weeks_format.bat  test_double_elim_bracket_tourney_setup_commands.sh  test_register.bat  test_start_match.bat  test_tourney_setup_commands.bat  test_tourney_setup_commands.sh
.github/workflows/: cf-pages.yml  github-pages-deploy.yml  publish-bridge.yml  update-db-prod.yml
docker/: build.sh  mimalloc.diff
gamebox/: Cargo.toml
gamebox-files/: Cargo.toml  test_replay_single.Gbx
gamebox-files/src/: classes.rs  lib.rs  main.rs  reader.rs
gamebox-files/src/classes/: game_ctn_challenge.rs  game_ctn_replay_record.rs
gamebox/src/: lib.rs  main.rs
gbx-rs/: Cargo.toml  test_replay_multi.Gbx
gbx-rs/src/: lib.rs  main.rs  reader.rs
tm-leaderboard-polling/: Cargo.toml
tm-leaderboard-polling/src/: main.rs
tm-leaderboard-worker/: .env  .env.example  Cargo.toml
tm-leaderboard-worker/src/: main.rs
tm-server-bridge/: .env.example  Cargo.toml
tm-server-bridge/src/: chat.rs  config.rs  main.rs  methods.rs  state.rs  telemetry.rs
tm-server-client/: Cargo.toml
tm-server-client/src/: configurator.rs  core.rs  lib.rs  method.rs  types.rs
tm-server-controller/: Cargo.toml  README.md
tm-server-controller/src/: callbacks.rs  core.rs  lib.rs  method.rs  types.rs
tm-server-manager/: .env.example  Cargo.toml
tm-server-manager-api-rs/: Cargo.toml
tm-server-manager-api-ts/: README.md  bunup.config.ts  package.json
tm-server-manager-api-ts/server-manager/: comeptition_schedules_table.ts  competition_available_server_pool_table.ts  competition_connection_data_table.ts  competition_connection_data_update_reducer.ts  competition_connection_table.ts  competition_node_position_table.ts  competition_node_position_update_reducer.ts  competition_record_table.ts  competition_table.ts  index.ts  (+24 more)
tm-server-manager-book/: book.toml
tm-server-manager-test/: Cargo.toml
tm-server-manager-test/src/: lib.rs  setup.rs
tm-server-manager/src/: authorization.rs  competition.rs  lib.rs  maps.rs  monitoring.rs  portal.rs  project.rs  raw_server.rs  record.rs  registration.rs  schedule.rs  tm_match.rs  tm_server.rs  user.rs  worker.rs
tm-server-manager/src/competition/: connection.rs  node.rs  roles.rs  server_pool.rs  template.rs
tm-server-manager/src/competition/connection/: action.rs  data.rs
tm-server-manager/src/competition/node/: position.rs
tm-server-manager/src/project/: permissions.rs  roles.rs  servers.rs  status_schedule.rs
tm-server-manager/src/raw_server/: config.rs  destination.rs  event.rs  occupation.rs  player.rs  replay.rs  test_patch_expand.rs
tm-server-manager/src/raw_server/method/: call.rs
tm-server-manager/src/record/: competition.rs
tm-server-manager/src/registration/: player.rs  team.rs  template.rs
tm-server-manager/src/tm_match/: event.rs  leaderboard.rs  players.rs  replay.rs  state.rs  template.rs  test_events.json
tm-server-manager/src/tm_server/: template.rs
tm-server-manager/src/worker/: jobs.rs
tm-server-types/: Cargo.toml
tm-server-types/src/: base.rs  config.rs  event.rs  method.rs
tm-server-types/src/base/: map.rs  player.rs
tm-server-types/src/config/: common.rs  enums.rs  helper.rs  options.rs  reverse_cup.rs  rounds.rs  rounds_bot_online.rs  time_attack.rs
tm-server-types/src/config/enums/: maps.rs  respawn_behaviour.rs  warmup.rs
tm-server-types/src/config/helper/: finish_timeout.rs  laps_number.rs  maps.rs  points_limit.rs  respawn_behaviour.rs  rounds.rs  warmup.rs
tm-server-types/src/event/: custom.rs  give_up.rs  map.rs  match.rs  pause.rs  play_loop.rs  player.rs  podium.rs  respawn.rs  round.rs  scores.rs  server.rs  start_line.rs  turn.rs  warm_up.rs  way_point.rs
tm-server-types/src/method/: chat.rs  player.rs
tm-tourney-manager/: .env.example  Cargo.toml
tm-tourney-manager-admin/: .gitignore  Cargo.toml  README.md  index.html
tm-tourney-manager-admin/public/: main.scss
tm-tourney-manager-admin/src/: lib.rs  main.rs
tm-tourney-manager-admin/src/pages/: home.rs
tm-tourney-manager-api-rs/: Cargo.toml
tm-tourney-manager-api-ts/: README.md  package.json  tsconfig.json  tsup.config.ts
tm-tourney-manager-test/: Cargo.toml
tm-tourney-manager-test/src/: lib.rs  setup.rs
tm-tourney-manager/src/: auth.rs  authorization.rs  competition.rs  emulator.rs  env.rs  environment.rs  event.rs  generator.rs  ghosts.rs  graph.rs  leaderboard.rs  lib.rs  map_record.rs  match.rs  monitoring.rs  portal.rs  project.rs  raw_server.rs  record.rs  registration.rs  registry.rs  schedule.rs  scheduling.rs  server.rs  stage.rs  tm_match.rs  tournament.rs  user.rs  worker.rs
tm-tourney-manager/src/competition/: connection.rs  connections.rs  node.rs  permissions.rs  registration.rs  roles.rs  scheduling.rs  server_pool.rs  template.rs
tm-tourney-manager/src/competition/connection/: action.rs  connection_data.rs  data.rs  node_position.rs
tm-tourney-manager/src/competition/node/: position.rs
tm-tourney-manager/src/event/: scheduling.rs
tm-tourney-manager/src/match/: ephemeral_state.rs  event.rs  leaderboard.rs  match_state.rs  players.rs  reconstruction.rs  template.rs
tm-tourney-manager/src/match/leaderboard/: rounds.rs
tm-tourney-manager/src/project/: permissions.rs  roles.rs  servers.rs  status_schedule.rs
tm-tourney-manager/src/raw_server/: config.rs  event.rs  method.rs  player.rs  replay.rs  state.rs
tm-tourney-manager/src/raw_server/method/: call.rs  response.rs
tm-tourney-manager/src/record/: competition.rs  local.rs  map.rs  match.rs
tm-tourney-manager/src/registration/: player.rs  team.rs  template.rs
tm-tourney-manager/src/server/: config.rs  event.rs  method.rs  state.rs
tm-tourney-manager/src/server/method/: call.rs  response.rs
tm-tourney-manager/src/tm_match/: event.rs  leaderboard.rs  match_state.rs  players.rs  state.rs  template.rs
tm-tourney-manager/src/tournament/: permissions.rs  registration.rs  roles.rs  status_schedule.rs
tm-tourney-manager/src/worker/: jobs.rs
(+275 files in other folders)
