[workspace]
members = [
    "gbx-rs",
    "tm-leaderboard-worker",
    "tm-server-bridge",
    "tm-server-controller",
    "tm-server-types",
    "tm-tourney-manager",
    "tm-tourney-manager-api-rs",
    "tm-tourney-manager-test",
]
resolver = "3"

[workspace.package]
version = "0.0.4-dev"
authors = ["kistz (Kilian Strunz)"]
keywords = ["trackmania", "nadeo", "gbxremote", "gbx", "api", "xml-rpc"]
categories = [
    "api-bindings",
    "network-programming",
    "asynchronous",
    "trackmania",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kistz/tm-tourney-manager"
edition = "2024"


[workspace.dependencies]
#==================
# Util Dependencies
#==================
takumi = "0"
dotenvy = "0.15"
tokio = { features = ["full"], version = "1" }
base64 = { version = "*" }
dxr = "0.8"
# Renamed to json because maybe swtich to simd-json
json = { package = "serde_json", version = "*" }
serde = { version = "1" }
petgraph = { version = "0.8" }
uuid = { version = "1.12", features = ["serde"] }


#============
# SpacetimeDB
#============
spacetimedb = { version = "1.12.0", features = ["unstable"] }
spacetimedb-lib = { version = "1.12.0" }
spacetimedb-sdk = { version = "1.12.0" }


#==============
# Worspace Deps
#==============
gbx-rs = { path = "./gbx-rs" }
tm-tourney-manager-api-rs = { path = "./tm-tourney-manager-api-rs" }
tm-server-types = { path = "./tm-server-types" }
tm-server-controller = { path = "./tm-server-controller" }


#=======
#Testing
#=======

testcontainers = { version = "0", default-features = false, features = [
    "blocking",
] }
insta = { version = "1", features = ["yaml"] }
