[workspace]
members = [
    "gbx-rs",
    "tm-leaderboard-worker",
    "tm-server-bridge",
    "tm-server-controller",
    "tm-server-types",
    "tm-server-manager",
    "tm-server-manager-api-rs",
    "tm-server-manager-test",
]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
authors = ["kistz (Kilian Strunz)"]
keywords = ["trackmania", "nadeo", "gbxremote", "gbx", "api", "xml-rpc"]
categories = [
    "api-bindings",
    "network-programming",
    "asynchronous",
    "trackmania",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tmservers/tm-server-manager"
edition = "2024"


[workspace.dependencies]
#==================
# Util Dependencies
#==================
#takumi = "0"
dotenvy = "0.15"
tokio = { features = ["full"], version = "1" }
base64 = { version = "*" }
dxr = "0.8"
json = { package = "simd-json", version = "0.17" }
serde = { version = "1" }
uuid = { version = "1.12", features = ["serde"] }
# This can be removed if we actualy have higher-ranked trait bounds for AsyncFnMuts Output type which is a supertrait of AsyncFn which is needed for event propagation in the trackmania server. 
async_fn_traits = "*"
petgraph = { version = "0.8.3", features = ['all'] }

#============
# SpacetimeDB
#============
spacetimedb = { version = "2.0.5", features = [
    "unstable",
], git = "https://github.com/kistz/SpacetimeDB.git", branch = "async-procedures" }
spacetimedb-lib = { version = "2.0.5", git = "https://github.com/kistz/SpacetimeDB.git", branch = "async-procedures" }
spacetimedb-sdk = { version = "2.0.5", git = "https://github.com/kistz/SpacetimeDB.git", branch = "async-procedures" }


#==============
# Worspace Deps
#==============
gbx-rs = { path = "./gbx-rs" }
tm-server-manager-api-rs = { path = "./tm-server-manager-api-rs", version = "0.1.0-dev" }
tm-server-types = { path = "./tm-server-types", version = "0.1.0-dev" }
tm-server-controller = { path = "./tm-server-controller", version = "0.1.0-dev" }


#=======
#Testing
#=======

testcontainers = { version = "0", default-features = false, features = [
    "blocking",
] }
insta = { version = "1", features = ["yaml"] }
