[package]
name = "gamebox-files"
description = "Parse .GBX files for Trackmania and perform read/write operations."
readme = "README.md"
publish = true


version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
lzokay = { version = "2", features = ["decompress", "compress"] }
thiserror = "2"
