[package]
name = "gamebox-files"
description = "Parse .GBX files for Trackmania and perform read/write operations."
readme = "README.md"
publish = true


version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
#lzokay = { version = "2", features = ["decompress", "compress", "std"] }
#rust-lzo = "0"
minilzo-rs = "0"
thiserror = "2"
flate2 = "1.0"
