[package]
name = "gamebox"
description = "Parse .GBX files for Trackmania and perform read/write operations."
readme = "README.md"
publish = true


version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
