[package]
name = "tm-leaderboard-polling"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true

dotenvy.workspace = true
nadeo-api-rs = "*"
spacetimedb-sdk.workspace = true
tm-tourney-manager-api-rs.workspace = true
