[package]
name = "tm-server-bridge"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tm-server-client = { path = "../tm-server-client" }

spacetimedb-sdk.workspace = true
tm-tourney-manager-api-rs.workspace = true

gamebox-files = { path = "../gamebox-files" }

takumi.workspace = true

nadeo-api = "*"

dotenvy.workspace = true

serde = { version = "*", features = ['derive'] }

# Implements the types defined in the Otel spec
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "metrics",
    "grpc-tonic",
] }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = "0.32"

# Allows you to export data to Jaeger
opentelemetry-jaeger-propagator = "0.31"

[dev-dependencies]
testcontainers = { version = "*", features = ["blocking"] }
#insta = { version = "*" }

[features]
tracing = []
