[package]
name = "tm-server-bridge"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true

spacetimedb-sdk.workspace = true
tm-server-controller.workspace = true
tm-server-types.workspace = true
tm-tourney-manager-api-rs.workspace = true

dotenvy.workspace = true

#takumi.workspace = true

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { workspace = true, features = ['derive'] }

nadeo-api = "*"


[dev-dependencies]
testcontainers = { version = "*", features = ["blocking"] }
#insta = { version = "*" }

[features]
tracing = []
