[package]
name = "tm-server-bridge"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true

spacetimedb-sdk.workspace = true
tm-server-controller.workspace = true
tm-server-types.workspace = true
tm-tourney-manager-api-rs.workspace = true

dotenvy.workspace = true

#takumi.workspace = true

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { workspace = true, features = ['derive'] }

nadeo-api = "*"

# This is needed because openssl is an implicit dependency.
# If we want to compile for docker musl we need to statically link
# against it and otherwise it wont be found.
# The other builds continue to work tho so for now deciding to not 
# feature gate it and enable it iin all cases.
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
testcontainers = { version = "*", features = ["blocking"] }
#insta = { version = "*" }

[features]
tracing = []
