[package]
name = "tm-server-controller"
description = "Call methods on and receive events from a trackmania server through XML-RPC"
readme = "README.md"
publish = true

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tm-server-types = { workspace = true, features = ["serde"] }

tokio = { workspace = true, features = ["full"] }
tachyonix = "*"
bytes = "1"

serde = { workspace = true, features = ["derive"] }


dxr.workspace = true
base64.workspace = true

dashmap = "*"

thiserror = "*"

tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.31", optional = true }

[dev-dependencies]
insta = { version = "*", features = ["yaml"] }
testcontainers = { version = "*" }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:opentelemetry"]
