[package]
name = "tm-server-manager-api-rs"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

publish = true

[dependencies]
spacetimedb-sdk = { workspace = true }

[features]
#web = ["spacetimedb-sdk/web"]
