[package]
name = "tm-server-manager-test"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
testcontainers.workspace = true
spacetimedb-sdk.workspace = true
tm-server-manager-api-rs.workspace = true
insta.workspace = true
