[package]
name = "tm-server-manager"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
spacetimedb = { workspace = true }
tm-server-types = { path = "../tm-server-types", features = ["spacetime"] }
gbx-header = "0"

serde = { workspace = true, features = ["derive"] }
json.workspace = true

#gbx-rs.workspace = true
base64.workspace = true
petgraph.workspace = true


[features]
production = []
