[package]
name = "tm-server-types"
publish = true
description = "Types used by Trackmania servers XML-RPC."

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
spacetimedb-lib = { workspace = true, optional = true }

serde = { workspace = true, optional = true }
# Renamed to json because maybe swtich to simd-json
json.workspace = true
dxr = { workspace = true, features = ["derive"] }
base64.workspace = true
uuid.workspace = true


[features]
default = ["serde"]
serde = ["dep:serde"]
spacetime = ["dep:spacetimedb-lib"]
