[package]
name = "tm-tourney-manager-admin"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

singlestage = "*"

#TODO move to workspace if web support gets merged
spacetimedb-sdk = { package = "spacetimedb-sdk", git = "https://github.com/thlsrms/SpacetimeDB", branch = "rust-web-sdk", features = [
    "web",
] }


# utils#spacetimedb-sdk.workspace = true
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
