[package]
name = "tm-tourney-manager-test"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
testcontainers.workspace = true
tokio = { version = "1", features = ["full", "rt"] }
spacetimedb-sdk.workspace = true
tm-tourney-manager-api-rs.workspace = true
