[package]
name = "tm-tourney-manager"
publish = false

version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
spacetimedb = { workspace = true, optional = true }
tm-server-types = { path = "../tm-server-types" }
gbx-header = "0"

[dev-dependencies]
testcontainers = { version = "0", features = ["blocking"] }

[features]
default = ["development", "spacetime"]
development = []
spacetime = ["dep:spacetimedb", "tm-server-types/spacetime"]
